--- a/src/app/component/user-profile/user-profile.component.html
+++ b/src/app/component/user-profile/user-profile.component.html
@@ -38,21 +38,6 @@
         </div>
     </div>
 
-    <div class="form-group">
-      <label for="recoveryQuestion">Recovery Question</label>
-      <select class="form-control" id="recoveryQuestion" required [(ngModel)]="user.recoveryQuestion" name="recoveryQuestion" #recoveryQuestion="ngModel" disabled>
-        <option *ngFor="let ques of questions" [value]="ques">{{ques}}</option>
-      </select>
-    </div>
-
-    <div class="form-group">
-      <label for="alterEgo">Recovery Answer</label>
-      <input type="text" class="form-control" id="recoveryAnswer" [(ngModel)]="user.recoveryAnswer" name="recoveryAnswer" #recoveryAnswer="ngModel" disabled>
-      <div [hidden]="recoveryAnswer.valid || recoveryAnswer.pristine"
-             class="alert alert-danger">
-             recoveryAnswer is required
-        </div>
-    </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-secondary" (click)="updateUser()" data-dismiss="modal">Save</button>
       <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
@@ -76,6 +61,22 @@
     <div class="form-group">
       <label for="alterEgo">New Password</label>
       <input type="text" class="form-control" id="password" required [(ngModel)]="user.password" name="password" #password="ngModel">
+    </div>
+
+    <div class="form-group">
+      <label for="recoveryQuestion">Recovery Question</label>
+      <select class="form-control" id="recoveryQuestion" required [(ngModel)]="user.recoveryQuestion" name="recoveryQuestion" #recoveryQuestion="ngModel" disabled>
+        <option *ngFor="let ques of questions" [value]="ques">{{ques}}</option>
+      </select>
+    </div>
+
+    <div class="form-group">
+      <label for="alterEgo">Recovery Answer</label>
+      <input type="text" class="form-control" id="recoveryAnswer" [(ngModel)]="user.recoveryAnswer" name="recoveryAnswer" #recoveryAnswer="ngModel">
+      <div [hidden]="recoveryAnswer.valid || recoveryAnswer.pristine"
+             class="alert alert-danger">
+             recoveryAnswer is required
+        </div>
     </div>
 
     <div class="modal-footer">
