portfolio and sidebar changes

--- a/src/app/component/portfolio/asset-details/asset-details.component.html
+++ b/src/app/component/portfolio/asset-details/asset-details.component.html
@@ -1,3 +1,5 @@
+<app-nav></app-nav>
+<app-sidebar></app-sidebar>
 <!-- Begin Page Content -->
 <div id="asset-details-content">
     <div class="container-fluid">
