--- a/src/app/component/portfolio/add-asset/add-asset.component.html
+++ b/src/app/component/portfolio/add-asset/add-asset.component.html
@@ -8,20 +8,49 @@
             <div [hidden]="submitted">
                 <form #transactionForm="ngForm">
             
-                  <div class="form-group">
+                  <div class="form-group" *ngIf="newtrans">
                     <label for="symbol">Company Symbol</label>
                       <input  type="text" name="symbol" id="symbol" placeholder={{stringSymbol}} 
                               class="form-control"      autofocus
                               required    maxlength="6" pattern="([0-9A-Za-z.-]{1,6})" 
-                              [(ngModel)]="Transaction.symbol"      #symbol="ngModel"
+                              [(ngModel)]="Transaction.symbol"      #symbol="ngModel" style="text-transform:uppercase"
                               >
                       <div    [hidden]="symbol.valid || symbol.pristine"
                               class="alert alert-danger">
                               The symbol is not valid
                       </div>
                   </div>
+
+                  <div class="form-group" *ngIf="!newtrans">
+                    <label for="symbol">Company Symbol</label><br>
+                    <label for="symbol" style="font-weight: bold">{{stringSymbol}}</label>
+                  </div>
                   
-                    <div class="form-group">
+                    <div *ngIf="shareCount && !Transaction.transaction" class="form-group">
+                    <label for="shares">{{shareCount}}</label>
+                      <input  type="number" name="shares"           id="shares"            placeholder="Number of shares" 
+                              required      pattern="([0-9]{1,6})"  class="form-control"
+                              [(ngModel)]="Transaction.shares"      #shares="ngModel" max={{passedInShares}}
+                            >
+                      <div  [hidden]="shares.valid || shares.pristine"
+                            class="alert alert-danger">
+                            Invlid number of shares
+                      </div>
+                  </div>
+
+                  <div *ngIf="shareCount && Transaction.transaction" class="form-group">
+                    <label for="shares">{{shareCount}}</label>
+                      <input  type="number" name="shares"           id="shares"            placeholder="Number of shares" 
+                              required      pattern="([0-9]{1,6})"  class="form-control"
+                              [(ngModel)]="Transaction.shares"      #shares="ngModel"
+                            >
+                      <div  [hidden]="shares.valid || shares.pristine"
+                            class="alert alert-danger">
+                            Invlid number of shares
+                      </div>
+                  </div>
+
+                  <div *ngIf="!shareCount" class="form-group">
                     <label for="shares">Amount of shares: maximum is 999,999 <p>{{shareCount}}</p></label>
                       <input  type="number" name="shares"           id="shares"            placeholder="Number of shares" 
                               required      pattern="([0-9]{1,6})"  class="form-control"
@@ -34,26 +63,56 @@
                   </div>
                 
                     <div class="form-group">
-                      <label for="price">Price: maximum is $9999.99</label>
+                      <label for="price">Price: maximum is $999999.999</label>
                       <input  type="number"  id="price"  name="price"    placeholder="price per share"
-                              required pattern="^\d{0,4}(\.\d{0,2})?$"   class="form-control" 
+                              required pattern="^\d{0,6}(\.\d{0,3})?$"   class="form-control" 
                               [(ngModel)]="Transaction.price"            #price="ngModel">
+                              <div *ngIf="currencyType && passedInShares" class="form-group">
+                                <label style="text-align: center; font-weight: bold">CAD</label>
+                              </div>
+                              <div *ngIf="!currencyType && passedInShares" class="form-group">
+                                <label style="text-align: center; font-weight: bold">USD</label>
+                              </div>
+
                       <div    [hidden]="price.valid || price.pristine"
                               class="alert alert-danger">
                               Invalid price
                       </div>
                   </div>
+
+                  <div *ngIf="currencyType == null" class="form-group">
+                      <ul class="nav justify-content-center">
+                          <li class="nav-item">
+                              <label class="radioButton">CAD
+                                <input  type="radio"  name="currency" id="currency"
+                                        required [value]="true" class="form-control"
+                                        [(ngModel)]="Transaction.currency" #currency="ngModel" checked="checked"
+                                        >
+                                <span class="checkmark"></span>
+                              </label> 
+                          </li>
+                          <li class="nav-item">
+                              <label  class="radioButton">USD
+                                <input type="radio"  name="usd" id="usd"
+                                        required [value]="false" class="form-control" 
+                                        [(ngModel)]="Transaction.currency" #currency="ngModel"
+                                        >
+                                <span class="checkmark"></span>
+                              </label> 
+                          </li>
+                      </ul>  
+                  </div>
                   
-                      <div class="form-group">
-                        <label for="buydate">Transaction Date </label>
-                        <input  type="date" class="form-control" id="buydate" name="buydate"
-                                required    placeholder="date purchased"
-                                [(ngModel)]="Transaction.buydate"             #buydate="ngModel">
-                        <div  [hidden]="buydate.valid || buydate.pristine"
-                              class="alert alert-danger">
-                              date is required
-                        </div>
-                      </div>
+                  <div class="form-group">
+                    <label for="buydate">Transaction Date </label>
+                    <input  type="date" class="form-control" id="buydate" name="buydate"
+                            required    placeholder="date purchased"
+                            [(ngModel)]="Transaction.buydate"             #buydate="ngModel">
+                    <div  [hidden]="buydate.valid || buydate.pristine"
+                          class="alert alert-danger">
+                          date is required
+                    </div>
+                  </div>
                 
                   <div class="form-group">
                       <div>  
