--- a/src/app/component/portfolio/current-portfolio/current-portfolio.component.html
+++ b/src/app/component/portfolio/current-portfolio/current-portfolio.component.html
@@ -1,3 +1,5 @@
+<app-nav></app-nav>
+<app-sidebar></app-sidebar>
 <!--TOP TABLE DISPLAYING OVERALL STATISTICS-->
 <div id="current-portfolio-content">
   <div class="container-fluid">
@@ -31,11 +33,11 @@
                     <div class="d-flex justify-content-center" width="100%">
                         <table class = "table table-borderless" width = 100% cellspacing = "0">
                             <thead>
-                              <th class="text-center" style="font-size: 14px">CURRENT VALUE OF PORTFOLIO</th>
-                              <th class="text-center" style="font-size: 14px">CURRENT GAIN/LOSS               </th>
-                              <th class="text-center" style="font-size: 14px">TOTAL INVESTED:                 </th>
-                              <th class="text-center" style="font-size: 14px">TOTAL PULLED OUT:               </th>
-                              <th class="text-center" style="font-size: 14px">TOTAL REALIZED GAIN:            </th>
+                              <th class="text-center" style="font-size: 14px">CURRENT VALUE OF PORTFOLIO (CAD)</th>
+                              <th class="text-center" style="font-size: 14px">CURRENT GAIN/LOSS (CAD) </th>
+                              <th class="text-center" style="font-size: 14px">TOTAL INVESTED (CAD):                 </th>
+                              <th class="text-center" style="font-size: 14px">TOTAL PULLED OUT (CAD):               </th>
+                              <th class="text-center" style="font-size: 14px">TOTAL REALIZED GAIN (CAD):            </th>
                             </thead>
                             <tbody>
                               <tr>
@@ -61,7 +63,7 @@
         <div class="card shadow mb-4">
             <div class="card-header py-3">
               <div class="row">
-              <div class="col-6"><h6 class="m-0 font-weight-bold text-primary">Assets</h6></div>
+              <div class="col-6"><h6 class="m-0 font-weight-bold text-primary">Canadian Assets</h6></div>
               </div>
             </div>
             <div class="card-body">
@@ -70,7 +72,7 @@
                     <thead>
                         <tr> 
                           <th>Symbol</th>
-                          <th>Current Price (USD)</th>
+                          <th>Current Price (CAD)</th>
                           <th>Average Buy Price</th>
                           <th>Shares Owned</th>
                           <th>Current Total</th>
@@ -78,14 +80,16 @@
                         </tr>
                       </thead>
                       <tbody >    
-                        <tr *ngFor="let asset of assets" [ngClass]="'tablerow'">
-                            <td><a  [routerLink]="['/portfolio/', portfolioID, asset.symbol]" routerLinkActive="active" >{{ asset.symbol }}</a></td>
-                            <td>{{ asset.currentPrice | currency:'USD':'symbol-narrow':'1.2-2'}}</td>
-                            <td>{{ asset.avgprice | currency:'USD':'symbol-narrow':'1.2-2'}}</td>
+                        <tr *ngFor="let asset of cadAssets" [ngClass]="'tablerow'">
+                            <td><a  [routerLink]="['/portfolio/', portfolioID, asset.symbol]" routerLinkActive="active" style="text-transform: uppercase" >{{ asset.symbol }}</a></td>
+                            <td *ngIf="asset.currentPrice != 0">{{ asset.currentPrice | currency:'CAD':'symbol-narrow':'1.2-2'}}</td>
+                            <td *ngIf="asset.currentPrice == 0">Price Not Available</td>
+                            <td>{{ asset.avgprice | currency:'CAD':'symbol-narrow':'1.2-2'}}</td>
                             <td>{{ asset.shares}}</td>
-                            <td>{{asset.shares * asset.currentPrice | currency:'USD':'symbol-narrow':'1.2-2'}}</td>
-                            <td>%{{asset.gain | number:'1.1-2'}}</td>
-                            <td style="border:none; text-align: center"><button type="button" class="btn btn-dark" (click)="openModal(asset.symbol, asset.shares, portfolioID)">Trade</button></td>
+                            <td *ngIf="asset.currentPrice != 0">{{asset.shares * asset.currentPrice | currency:'CAD':'symbol-narrow':'1.2-2'}}</td>
+                            <td *ngIf="asset.currentPrice == 0">{{asset.avgprice * asset.shares | currency:'CAD':'symbol-narrow':'1.2-2'}}</td>
+                            <td [style.color]="asset.gain < 0  ? 'red' : 'green'">%{{asset.gain | number:'1.1-2'}}</td>
+                            <td style="border:none; text-align: center"><button type="button" class="btn btn-dark" (click)="openModal(asset.symbol, asset.shares, portfolioID, asset.currency)">Trade</button></td>
                             <td style="border:none; text-align: center"><button type="button" class="btn btn-dark"[routerLink]="['/portfolio/', portfolioID, asset.symbol]" routerLinkActive="active" >DETAILS</button></td>
                             <p></p>
                           <br>
@@ -95,7 +99,52 @@
                 </div>
             </div>
         </div>
+      
+
+      <!--BOTTOM TABLE DISPLAYING ASSET STATISTICS-->
+        <!--asset table-->
+        <div class="card shadow mb-4">
+          <div class="card-header py-3">
+            <div class="row">
+            <div class="col-6"><h6 class="m-0 font-weight-bold text-primary">US Assets</h6></div>
+            </div>
+          </div>
+          <div class="card-body">
+            <div class="table-responsive">
+              <table class="table table-bordered" id="portfolioTable" width="100%" cellspacing="0">
+                  <thead>
+                      <tr> 
+                        <th>Symbol</th>
+                        <th>Current Price (USD)</th>
+                        <th>Average Buy Price</th>
+                        <th>Shares Owned</th>
+                        <th>Current Total</th>
+                        <th>Gain/Loss (unrealized)</th>
+                      </tr>
+                    </thead>
+                    <tbody >    
+                      <tr *ngFor="let asset of usdAssets" [ngClass]="'tablerow'">
+                          <td><a  [routerLink]="['/portfolio/', portfolioID, asset.symbol]" routerLinkActive="active" style="text-transform: uppercase">{{ asset.symbol }}</a></td>
+                          <td *ngIf="asset.currentPrice != 0">{{ asset.currentPrice | currency:'USD':'symbol-narrow':'1.2-2'}}</td>
+                          <td *ngIf="asset.currentPrice == 0">Price Not Available</td>
+                          <td>{{ asset.avgprice | currency:'USD':'symbol-narrow':'1.2-2'}}</td>
+                          <td>{{ asset.shares}}</td>
+                          <td *ngIf="asset.currentPrice != 0">{{asset.shares * asset.currentPrice | currency:'USD':'symbol-narrow':'1.2-2'}}</td>
+                          <td *ngIf="asset.currentPrice == 0">{{asset.avgprice * asset.shares | currency:'USD':'symbol-narrow':'1.2-2'}}</td>
+                          <td [style.color]="asset.gain < 0  ? 'red' : 'green'">%{{asset.gain | number:'1.1-2'}}</td>
+                          <td style="border:none; text-align: center"><button type="button" class="btn btn-dark" (click)="openModal(asset.symbol, asset.shares, portfolioID, asset.currency)">Trade</button></td>
+                          <td style="border:none; text-align: center"><button type="button" class="btn btn-dark"[routerLink]="['/portfolio/', portfolioID, asset.symbol]" routerLinkActive="active" >DETAILS</button></td>
+                          <p></p>
+                        <br>
+                      </tr>   
+                    </tbody>
+                </table> 
+              </div>
+          </div>
       </div>
+
+    </div>
+    
 
       <!--CHART-->
       <div class="col-4">
@@ -104,9 +153,22 @@
                   <canvas #portfolioChart>{{ chart }}</canvas>
               </div>
           </div>
+
+          <div class="card text-black bg-light mb-3" style="min-width: 100%">
+            <div class="card-body">
+                <p>Stock pricing information is delayed by at least 30 minutes.</p>
+                <p>Pricing information can be retrieved for stocks on major North American exchanges.</p>
+                <p>Pricing information may not be able to be retrieved for all stocks, we apologize for the inconvenience</p>
+                <hr>
+                <p>Financial information courtesy of Finviz, guruFocus, and IEXTrading</p>
+            </div>
+        </div>
       </div>
 
     </div>
 
   </div>
+
+ 
+
 </div>
