--- a/src/app/component/nav/nav.component.html
+++ b/src/app/component/nav/nav.component.html
@@ -11,7 +11,7 @@
       </li>
       <li class="nav-item dropdown no-arrow">
         <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <span *ngIf=user>{{user.firstname}} {{user.lastname}}</span>
+          <span *ngIf=user>{{user.firstname}} {{user.lastname}} &nbsp;</span>
           <i class="fas fa-user-circle fa-fw"></i>
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
@@ -27,7 +27,13 @@
   <!-- User profile Modal -->
   <div class="modal fade" id="user-profileModal" role="dialog">
     <div class="modal-dialog">
-    <div class="modal-content">
+        <div class="modal-content" style="background-color: whitesmoke">
+        <div class="modal-header" style="background-color: green">
+            <h5 class="modal-title" id="exampleModalLabel" style="color: white; font-weight: bold;">User Profile</h5>
+              <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">×</span>
+              </button>
+          </div>
       <app-user-profile></app-user-profile>
     </div>
   </div>
@@ -37,16 +43,16 @@
 <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+      <div class="modal-header" style="background-color: green">
+        <h5 class="modal-title" id="exampleModalLabel" style="color: white">Ready to Leave?</h5>
           <button class="close" type="button" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">×</span>
           </button>
         </div>
-        <div class="modal-body">Are you sure you want to logout?</div>
-        <div class="modal-footer">
-          <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-          <button class="btn btn-secondary" type = button (click) = "logout()">Yes</button>
+        <div class="modal-body" style="background-color: whitesmoke">Are you sure you want to logout?</div>
+        <div class="modal-footer" style="background-color: green">
+          <button class="btn btn-dark" type="button" data-dismiss="modal">Cancel</button>
+          <button class="btn btn-dark" type = button (click) = "logout()">Yes</button>
         </div>
      </div>
   </div>
