--- a/src/app/component/dashboard/dashboard.component.css
+++ b/src/app/component/dashboard/dashboard.component.css
@@ -12,3 +12,105 @@
 .right-half{
     display: inline-block;
 }
+
+#newsTitle {
+    font-family: cursive;
+    font-size: 18px;
+}
+
+.searchBar {
+    position: relative;
+    left: 30px;
+    border: 3px solid rgb(142, 241, 3);
+}
+
+#news {
+    position: relative;
+    left: 500px;
+    font-family: cursive;
+    font-size: 24px;
+    color: black
+}
+
+#table1 {
+    border: 3px solid rgb(142, 241, 3);
+    position: relative;
+    left: 30px;
+    width: 700px;
+}
+
+#title {
+    font-family: "Apple Chancery", cursive;
+    font-size: 18px;
+    font-weight: bold;
+    color: black;
+    position: relative;
+    left: 30px;
+}
+
+#author{
+    font-family: "Apple Chancery", cursive;
+    font-size: 16px;
+    color: black;
+    position: relative;
+    top: 5px;
+    left: 5px;
+}
+
+ #desc {  
+    font-family: "Apple Chancery", cursive;
+    font-size: 16px;
+    color: black;
+    position: relative;
+    top: 5px;
+    left: 250px;
+}
+
+#descr {  
+    font-family: "Apple Chancery", cursive;
+    font-size: 15px;
+    color: black;
+    position: relative;
+    top: 5px;
+}
+
+#readmore {  
+    font-family: "Apple Chancery", cursive;
+    font-size: 15px;
+    color: black;
+    position: relative;
+    top: 10px;
+    left: 250px;
+    color: rgb(142, 241, 3);
+    border: 1px solid rgb(142, 241, 3);
+}
+
+#fullSite{  
+    font-family: "Apple Chancery", cursive;
+    font-size: 15px;
+    color: black;
+    position: relative;
+    top: 10px;
+    left: 350px;
+    border: 1px solid rgb(142, 241, 3);
+}
+
+#line {   
+    top: 10px;
+}
+
+#modalContent {
+    font-family: "Apple Chancery", cursive;
+    font-size: 15px;
+    color: black;
+    position: relative;
+    top: 10px;
+}
+
+#attribution {
+    font-family: "Apple Chancery", cursive;
+    font-size: 15px;
+    color: black;
+    position: relative;
+    top: 10px;
+}
