--- a/src/app/component/portfolio/add-asset/add-asset.component.html
+++ b/src/app/component/portfolio/add-asset/add-asset.component.html
@@ -151,6 +151,10 @@
                 </form> 
             </div>
 
+            <div [hidden] = "!submitted">
+              <p>Submitted Successfully!<span class="badge badge-light"></span></p>
+            </div>
+
       </div>
     </div>
   </div>      
